--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-torch==1.6.0
-torchvision==0.7.0
-matplotlib==3.3.1
-opencv_contrib_python==4.4.0.44
-numpy==1.19.1
-jupyter==1.0.0
+torch>=1.6.0
+torchvision>=0.7.0
+matplotlib>=3.3.1
+opencv_contrib_python>=4.4.0.44
+numpy>=1.19.1
+jupyter>=1.0.0
